tests/error/union_array_empty.gw
#! [contains] must be defined with empty
union U {
  int i;
  int[4] j;
}
